# sentx

./: .dockerignore  .gitignore  Dockerfile  README.md  model-details.md  pyproject.toml  server.py
app/: config.py  detect.py  routes.py  types.py  utils.py
models/: sentiment-classifier-lr.pkl
notebooks/: data-cleaning.ipynb  experiment-logs.md  fix-data-labels.ipynb  training-v1-knn.ipynb  training-v1.ipynb
